<resources>
    <string name="app_name">World Clock</string>
    //Countries
    <string name="aus">Australia</string>
    <string name="adelaide">Adelaide</string>
    <string name="brisbane">Brisbane</string>
    <string name="canberra">Canberra</string>
    <string name="darwin">Darwin</string>
    <string name="hobart">Hobart</string>
    <string name="melbourne">Melbourne</string>
    <string name="perth">Perth</string>
    <string name="sydney">Sydney</string>

    <string name="newyork">New York</string>
    // Buttons
    <string name="home_btn">Home</string>
    <string name="worldclock_btn">World Clock</string>
    <string name="settings_btn">Settings</string>
    <string name="login_btn">Login/Sign up</string>
    // home page
    <string name="localtime">Local time</string>
    // settings page
    <string name="background">Background</string>
    <string name="hometimesetting">Home page timezone</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="rememberpass">Remember password?</string>


</resources>
